
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sysinfo {unsigned long totalram; } ;


 unsigned long EXIT_FAILURE ;
 int debug1 (char*,unsigned long) ;
 int perror (char*) ;
 int sysinfo (struct sysinfo*) ;

unsigned long get_phys_size() {
 struct sysinfo info;
 int rv = sysinfo(&info);
 if (rv != 0) {
  perror("sysinfo()");
  return EXIT_FAILURE;
 }
 debug1("phys size: %016lx\n", info.totalram);
 return info.totalram;
}
