; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_get_phys_size.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_45175.c_get_phys_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysinfo = type { i64 }

@.str = private unnamed_addr constant [10 x i8] c"sysinfo()\00", align 1
@EXIT_FAILURE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"phys size: %016lx\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_phys_size() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.sysinfo, align 8
  %3 = alloca i32, align 4
  %4 = call i32 @sysinfo(%struct.sysinfo* %2)
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = call i32 @perror(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %9 = load i64, i64* @EXIT_FAILURE, align 8
  store i64 %9, i64* %1, align 8
  br label %16

10:                                               ; preds = %0
  %11 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @debug1(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i64 %12)
  %14 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  store i64 %15, i64* %1, align 8
  br label %16

16:                                               ; preds = %10, %7
  %17 = load i64, i64* %1, align 8
  ret i64 %17
}

declare dso_local i32 @sysinfo(%struct.sysinfo*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @debug1(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
